--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
     <h1 id = "aboutTitle">About Us</h1>
     <div id = "contentBox">
-    	<p><em>Heya!</em> This calculus problem generator was made by <a href = "jamesskripchuk.com">James Skripchuk</a> and Jesse Li. We're both students at <a href= "http://charterschool.org/">The Charter School of Wilmington</a>, and we made this website as our final project for AP Calculus AB. James took care of most of the web-development challenges (because this is also his Web-Dev final), while Jesse solved most of the problem generation tasks by making a <a href = "http://calculus-generator.appspot.com/">super rad problem generator API</a>. Hopefully this website will provide some extra practice for AP students next year. <em>See-ya!</em></p>
+    	<p><em>Heya!</em> This calculus problem generator was made by <a href = "http://jamesskripchuk.com">James Skripchuk</a> and Jesse Li. We're both students at <a href= "http://charterschool.org/">The Charter School of Wilmington</a>, and we made this website as our final project for AP Calculus AB. James took care of most of the web-development challenges (because this is also his Web-Dev final), while Jesse solved most of the problem generation tasks by making a <a href = "http://calculus-generator.appspot.com/">super rad problem generator API</a>. Hopefully this website will provide some extra practice for AP students next year. <em>See-ya!</em></p>
     	<p id = "ps"><em>Special thanks goes to Mr. Satalino and Mr. Kramer for being such wonderful human beings. <br><strong>Looseleaf!</strong></em></p>
     </div>
 </body>
